[gd_scene load_steps=13 format=3 uid="uid://6k33bmmxwbg"]

[ext_resource type="Script" path="res://Player/Player.gd" id="1_i2ueo"]
[ext_resource type="Texture2D" uid="uid://cdvm42u7rewd8" path="res://Imports/corbeau.png" id="2_0kwxy"]
[ext_resource type="Texture2D" uid="uid://gdjo0p2o0ewp" path="res://Imports/Graphics/Tiles/tile_0005.png" id="3_lo0vl"]
[ext_resource type="Script" path="res://Player/ShootSpeed.gd" id="3_wb4q8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_der08"]
size = Vector2(16, 12)

[sub_resource type="Animation" id="Animation_ugri4"]
resource_name = "Muzzleflash1"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Muzzleflash1_1:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Muzzleflash1_1:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.349066]
}

[sub_resource type="Animation" id="Animation_vuu0n"]
resource_name = "Muzzleflash2"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Muzzleflash2_1:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0001, 0.0002, 0.1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [true, true, true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Muzzleflash2_1:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.349066]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_iltfn"]
_data = {
"Muzzleflash1": SubResource("Animation_ugri4"),
"Muzzleflash2": SubResource("Animation_vuu0n")
}

[sub_resource type="Animation" id="Animation_b3go3"]
resource_name = "Nscoop"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.28319]
}

[sub_resource type="Animation" id="Animation_86dk1"]
resource_name = "Fly"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.5),
"transitions": PackedFloat32Array(1, 1, 0.241484),
"update": 1,
"values": [8, 9, 10]
}

[sub_resource type="Animation" id="Animation_c5ql3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [9]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cpegb"]
_data = {
"Fly": SubResource("Animation_86dk1"),
"Nscoop": SubResource("Animation_b3go3"),
"RESET": SubResource("Animation_c5ql3")
}

[node name="Player" type="CharacterBody2D" groups=["Player"]]
z_index = 4
script = ExtResource("1_i2ueo")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(1, -1)
scale = Vector2(2.51563, 2.20313)
texture = ExtResource("2_0kwxy")
hframes = 4
vframes = 4
frame = 9

[node name="CollisionPolygon2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -4)
shape = SubResource("RectangleShape2D_der08")

[node name="ShootSpeed" type="Timer" parent="."]
wait_time = 0.3
one_shot = true
script = ExtResource("3_wb4q8")

[node name="SpawnPos" type="Marker2D" parent="."]
position = Vector2(-12, -10)

[node name="SpawnPos2" type="Marker2D" parent="."]
position = Vector2(11, -10)

[node name="SpawnPos3" type="Marker2D" parent="."]
position = Vector2(0, -12)

[node name="Muzzleflash1_1" type="Sprite2D" parent="."]
visible = false
position = Vector2(-12, -10)
rotation = 0.349066
scale = Vector2(1.04221, 0.962827)
texture = ExtResource("3_lo0vl")

[node name="Muzzleflash1_2" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_iltfn")
}

[node name="Muzzleflash2_1" type="Sprite2D" parent="."]
visible = false
position = Vector2(11, -10)
scale = Vector2(0.921875, 0.882813)
texture = ExtResource("3_lo0vl")

[node name="Muzzleflash2_2" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_iltfn")
}

[node name="Noscoopie" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_cpegb")
}

[node name="ScoopTimer" type="Timer" parent="."]
wait_time = 1.5

[connection signal="timeout" from="ShootSpeed" to="." method="_on_shoot_speed_timeout"]
[connection signal="animation_finished" from="Noscoopie" to="." method="_on_noscoopie_animation_finished"]
[connection signal="timeout" from="ScoopTimer" to="." method="_on_scoop_timer_timeout"]
